--- a/style.css
+++ b/style.css
@@ -1,102 +1,139 @@
-*{
-    margin: 0px;
-    padding: 0px;
+* {
+  margin: 0px;
+  padding: 0px;
 }
 
-body{
-    background-image: url(782657.png);
+body {
+  background-image: url(782657.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  background-position: center;
+  background-position-y: 90%;
 }
 
-.top-div{
-    display: flex;
-    margin-left: 800px;
-    gap: 40px;
-    text-decoration: underline;
+.top-div {
+  display: flex;
+  justify-content: space-between;
+  padding: 30px;
 }
 
-
-.p7{
-    margin-left: 30px;
-    margin-bottom: 30px;
-    margin-top: 100px;
+.h3 {
+  color: white;
 }
 
-.h1{
-    margin-left: 30px;
-    margin-bottom: 30px;
-    color: white;
+.top-2 {
+  display: flex;
+  gap: 40px;
 }
 
-.h2{
-    margin-left: 30px;
-    margin-bottom: 30px;
-    color: white;
+.p7 {
 }
 
-
-.p1{
- color: white;   
+.h1 {
+  color: white;
 }
 
-.p2{
-    color: white;   
-   }
-
-.p3{
-   color: white;   
-  }
-
-.p4{
-    color: white;   
-   }
-
-.p5{
-    color: white;   
-   }
-
-.p6{
-    color: white;   
-   }
-
-.p7{
-    color: white;   
-   }
-
-.p8{
-    margin-left: 30px;
-    margin-bottom: 30px;
-    width: 350px;
-    color: white;
+.h2 {
+  color: white;
 }
 
-.div-1{
-    display: flex;
-    gap: 30px;
-    margin-left: 30px;
+.p1 {
+  color: white;
 }
 
-.b2{
-    border: none;
-    background-color: rgb(61, 127, 61);
-    margin-top: 15px;
-    margin-left: 20px;
-    color: white;
+.p2 {
+  color: white;
 }
 
-
-.b1{
-    color: white;
-    background-color: rgb(61, 127, 61);
-    border: none;
-    width: 100px;
-    height: 50px;
-    border-radius: 20px;
+.p3 {
+  color: white;
 }
 
-.div-2{
-    border: 1px white solid;
-    background-color: rgb(61, 127, 61);
-    height: 50px;
-    width: 300px;
-    border-radius: 20px;
+.p4 {
+  color: white;
+}
+
+.p5 {
+  color: white;
+}
+
+.p6 {
+  color: white;
+}
+
+.p7 {
+  color: white;
+}
+
+.p8 {
+  width: 350px;
+  color: white;
+}
+
+.div-1 {
+  display: flex;
+  gap: 30px;
+}
+
+.b2 {
+  background-color: transparent;
+  color: white;
+  display: flex;
+  gap: 10px;
+  border: 1px white solid;
+  height: 50px;
+  width: 200px;
+  border-radius: 20px;
+  padding: 15px;
+}
+
+.b1 {
+  color: white;
+  background-color: green;
+  border: none;
+  width: 100px;
+  height: 50px;
+  border-radius: 20px;
+}
+
+.fa-play {
+  color: white;
+  margin-left: 30px;
+}
+
+.i-div {
+  flex-direction: column;
+  display: flex;
+  color: white;
+  gap: 30px;
+  width: 50px;
+  align-items: center;
+}
+
+.top-2 p:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.middle {
+  display: flex;
+  gap: 70px;
+  padding: 50px;
+  margin-top: 200px;
+  align-items: center;
+}
+
+.text-div {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.i-div .fa-brands {
+  transition: 0.3s ease;
+}
+
+.i-div i:hover {
+  font-size: 30px;
 }
